@@ -59,6 +59,7 @@
 % XXX OLD FORMAT: modules not in the following list will receive
 % old format strudctures.
 -define(CONVERTED_MODULES, [
+  mod_disco,
   mod_roster,
   mod_vcard
 ]).
